@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Fl::paste would sometimes not recoginze external 
+	  changes of the clipboard (STR #722)
 	- Clipping fixes for OSX
 	- Removed attempt to find items via 
 	  Fl_Menu_::find_item() in linked submenus
